--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post do |p| %>
+<%= form_for @post, :html => {:class => "form-horizontal"}  do |p| %>
 
   <% if @post.errors.any? %>
   <ul>
@@ -8,7 +8,22 @@
   </ul>
   <% end %>
 
-  <p>Title: <%= p.text_field :title %></p>
-  <p>Body:<br><%= p.text_area :body %></p>
-  <%= p.submit "Submit" %>
-<% end %>
+  <div class="form-group">
+    <%= p.label :title, "Title:", class: "col-sm-1 control-label" %>
+    <div class="col-sm-10">
+      <%= p.text_field :title, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= p.label :body, "Body:", class: "col-sm-1 control-label" %>
+    <div class="col-sm-10">
+      <%= p.text_area :body, class: "form-control", rows:"4" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-1 col-sm-10">
+      <%= p.submit "Submit", class: "btn btn-default" %>
+    </div>
+  </div>
+  <% end %>
+
