--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,13 +17,21 @@
 <% end %>
 
 <%#= raise @post.inspect %>
-<%= form_for @comment, url: post_comments_path(@post) do |c| %>
-  <%= c.text_area :body, placeholder: "Write your comment here" %>
-  <br>
-  <%= c.submit %>
+<%= form_for @comment, url: post_comments_path(@post), :html => {:class => "form-horizontal"} do |c| %>
+  <div class="form-group">
+    <%= c.label :body, "Comment:", class: "col-sm-1 control-label" %>
+    <div class="col-sm-10">
+      <%= c.text_area :body, placeholder: "Write your comment here", class: "form-control", rows: "1" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-1 col-sm-10">
+      <%= c.submit "Submit", class: "btn btn-default" %>
+    </div>
+  </div>
 <% end %>
 
-<h2>Comments</h2>
+<h3>Comments</h3>
 
 <% @post.comments.each do |c| %>
   <p><%= c.body %></p>
@@ -32,7 +40,6 @@
   <%= link_to "Delete", post_comment_path(@post, c), method: :delete, data: {confirm: "Are you sure?"} %>
   <hr>
 <% end %>
-
 
 
 
