--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+ .sign-in {
+  float: right;
+ }
+
+ .header {
+  background-color: #dbd6d6;
+  border-bottom: 1px solid black;
+  padding: 5px;
+ }
+
+ .show-edit {
+  float: left;
+  margin-right: 10px;
+ }
