--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,30 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-<%= link_to "Home", root_path %>
-|
-<%= link_to "New Post", new_post_path %>
-<hr>
+<body class="container">
+<nav class="header">
+  <%= link_to "Home", root_path %>
+  |
+  <%= link_to "All Posts", posts_path %>
+  |
+  <%= link_to "New Post", new_post_path %>
 
+  <div class="sign-in">
+    <% if user_signed_in? %>
+        <%# current user is a method from Devise that gives you the user %>
+        <%# object for the currently logged in user %>
+        Welcome <%= current_user.name_display %>,
+        <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Log In", new_user_session_path %> |
+        <%= link_to "Register", new_user_registration_path %>
+    <% end %>
+  </div>
+</nav>
+
+<%= flash[:notice] || flash[:alert] %>
 <%= yield %>
 
 </body>
 </html>
+
