--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body class="container">
+
+<body>
 <nav class="header">
   <%= link_to "Home", root_path %>
   |
@@ -29,8 +30,10 @@
   </div>
 </nav>
 
-<%= flash[:notice] || flash[:alert] %>
-<%= yield %>
+<div class="container main">
+  <%= flash[:notice] || flash[:alert] %>
+  <%= yield %>
+</div>
 
 </body>
 </html>
