--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,30 @@
-<h1><%= @post.title %></h1>
+<div class="display-blog-post">
+  <h1><%= @post.title %></h1>
 
-<p><%= @post.body %></p>
+  <p><%= @post.body %></p>
 
-<p>Written By: <strong><%= @post.user.name_display %></strong><p>
+  <p>Written By: <strong><%= @post.user.name_display %></strong> on <%= formatted_date(@post.updated_at) %> <p>
 
-<div>
-  <div class="show-edit">
-    <%= button_to "Edit" , edit_post_path(@post) , method: :get %>
+  <div>
+    <div class="show-edit">
+      <%= button_to "Edit" , edit_post_path(@post) , method: :get %>
+    </div>
+    <div class="show-delete">
+      <%= button_to "Delete", post_path(@post) , method: :delete, data: {confirm: "Are you sure?"} %>
+    </div>
   </div>
-  <div class="show-delete">
-    <%= button_to "Delete", post_path(@post) , method: :delete, data: {confirm: "Are you sure?"} %>
+
+  <div class="like">
+    <%= render partial: "/likes/like" %>
   </div>
+
+  <div class="star">
+    <%= render partial: "stars/star" %>
+  </div>
+
 </div>
 
-<h2>Add A Comment</h2>
+<h3>Add A Comment</h3>
 
 <% if @comment.errors.any? %>
   <ul>
@@ -24,32 +35,28 @@
 <% end %>
 
 <%#= raise @post.inspect %>
-<%= form_for @comment, url: post_comments_path(@post), :html => {:class => "form-horizontal"} do |c| %>
+<%= form_for @comment, url: post_comments_path(@post), :html => {:class => "form-horizontal"} do |comment| %>
   <div class="form-group">
-    <%= c.label :body, "Comment:", class: "col-sm-1 control-label" %>
+    <%= comment.label :body, "Comment:", class: "col-sm-1 control-label" %>
     <div class="col-sm-10">
-      <%= c.text_area :body, placeholder: "Write your comment here", class: "form-control", rows: "1" %>
+      <%= comment.text_area :body, placeholder: "Write your comment here", class: "form-control", rows: "1" %>
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-1 col-sm-10">
-      <%= c.submit "Submit", class: "btn btn-default" %>
+      <%= comment.submit "Submit", class: "btn btn-default" %>
     </div>
   </div>
 <% end %>
 
-<h3>Comments</h3>
+<hr>
 
-<% @post.comments.each do |c| %>
-  <p><%= c.body %></p>
-  <%= link_to "Edit", edit_post_comment_path(@post, c) %>
-  |
-  <%= link_to "Delete", post_comment_path(@post, c), method: :delete, data: {confirm: "Are you sure?"} %>
-  <hr>
+<% @post.comments.each do |comment| %>
+  <div class="display-comments">
+    <p><%= comment.body %></p>
+    <%= link_to "Edit", edit_post_comment_path(@post, comment) %>
+    |
+    <%= link_to "Delete", post_comment_path(@post, comment), method: :delete, data: {confirm: "Are you sure?"} %>
+    <p><strong><%= comment.user.name_display %></strong> on <%= formatted_date(comment.updated_at) %> at <%= time_written(comment.updated_at) %> <p>
+  </div>
 <% end %>
-
-
-
-
-
-
