--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,37 +26,14 @@
 
 <h3>Add A Comment</h3>
 
-<% if @comment.errors.any? %>
-  <ul>
-    <% @comment.errors.full_messeges.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%#= raise @post.inspect %>
-<%= form_for @comment, url: post_comments_path(@post), :html => {:class => "form-horizontal"} do |comment| %>
-  <div class="form-group">
-    <%= comment.label :body, "Comment:", class: "col-sm-1 control-label" %>
-    <div class="col-sm-10">
-      <%= comment.text_area :body, placeholder: "Write your comment here", class: "form-control", rows: "1" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-1 col-sm-10">
-      <%= comment.submit "Submit", class: "btn btn-default" %>
-    </div>
-  </div>
-<% end %>
+<div class="comment_form">
+  <%= render partial: "comments/form" %>
+</div>
 
 <hr>
 
-<% @post.comments.each do |comment| %>
-  <div class="display-comments">
-    <p><%= comment.body %></p>
-    <%= link_to "Edit", edit_post_comment_path(@post, comment) %>
-    |
-    <%= link_to "Delete", post_comment_path(@post, comment), method: :delete, data: {confirm: "Are you sure?"} %>
-    <p><strong><%= comment.user.name_display %></strong> on <%= formatted_date(comment.updated_at) %> at <%= time_written(comment.updated_at) %> <p>
-  </div>
-<% end %>
+<div class="comments">
+  <% @post.comments.each do |comment| %>
+    <%= render partial: "/comments/comment", locals: {comment: comment} %>
+  <% end %>
+<div>
