--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,7 @@
 <div class="display-blog-post">
-  <h1><%= @post.title %></h1>
 
-  <p><%= @post.body %></p>
-
-  <p>Written By: <strong><%= @post.user.name_display %></strong> on <%= formatted_date(@post.updated_at) %> <p>
-
-  <div>
-    <div class="show-edit">
-      <%= button_to "Edit" , edit_post_path(@post) , method: :get %>
-    </div>
-    <div class="show-delete">
-      <%= button_to "Delete", post_path(@post) , method: :delete, data: {confirm: "Are you sure?"} %>
-    </div>
+  <div class="post-for-modal">
+    <%= render partial: "/posts/post" %>
   </div>
 
   <div class="like">
@@ -37,3 +27,17 @@
     <%= render partial: "/comments/comment", locals: {comment: comment} %>
   <% end %>
 <div>
+
+<div class="modal fade" id="edit-post-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Edit Post Below</h4>
+      </div>
+      <div class="modal-body">
+          ...
+      </div>
+    </div>
+  </div>
+</div>
