--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post, :html => {:class => "form-horizontal"}  do |p| %>
+<%= simple_form_for @post, :html => {:class => "form-horizontal"}  do |post| %>
 
   <% if @post.errors.any? %>
   <ul>
@@ -9,21 +9,23 @@
   <% end %>
 
   <div class="form-group">
-    <%= p.label :title, "Title:", class: "col-sm-1 control-label" %>
+    <%= post.label :title, "Title:", class: "col-sm-1 control-label" %>
     <div class="col-sm-10">
-      <%= p.text_field :title, class: "form-control" %>
+      <%= post.text_field :title, class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
-    <%= p.label :body, "Body:", class: "col-sm-1 control-label" %>
+    <%= post.label :body, "Body:", class: "col-sm-1 control-label" %>
     <div class="col-sm-10">
-      <%= p.text_area :body, class: "form-control", rows:"4" %>
+      <%= post.text_area :body, class: "form-control", rows:"4" %>
     </div>
+  </div>
+  <div class="checkbox-inline">
+    <%= post.association :categories, as: :check_boxes %>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-1 col-sm-10">
-      <%= p.submit "Submit", class: "btn btn-default" %>
+      <%= post.submit "Submit", class: "btn btn-default" %>
     </div>
   </div>
   <% end %>
-
